--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Stole the memes from https://github.com/iwakkrg/iwakkrg.github.io -->
     
     <!-- Redirect -->
-    <meta http-equiv="refresh" content="0; url=https://m.youtube.com/channel/UClJG1V66AgbYaMeGTfavl_w" />
+    <meta http-equiv="refresh" content="0; url=https://youreidiot.com/" />
   </head>
   <body>
   </body>
