--- a/goober/index.html
+++ b/goober/index.html
@@ -13,7 +13,7 @@
     <meta property="og:video:width" content="640">
     
     <!-- Redirect -->
-    <meta http-equiv="refresh" content="0; url=https://m.youtube.com/channel/UClJG1V66AgbYaMeGTfavl_w" />
+    <meta http-equiv="refresh" content="0; url=https://youarebigidiot.com/" />
   </head>
   <body>
   </body>
